--- a/templates/main.html
+++ b/templates/main.html
@@ -2,16 +2,17 @@
 <html>
     <head>
         <title>FOSS Catalog</title>
-        <link rel="stylesheet" href="static/style.css">
+        <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='style.css')}}">
     </head>
     <body>
         <div id="header">
-            <h1>FOSS Catalog</h1>
+            <h1><a href="{{ url_for('viewCatalog') }}">FOSS Catalog</a></h1>
+            <button><a href="#">Login</a></button>
             <!-- Conditional login/create button-->
         </div>
         <div id="content">
             {% block content %}
-            {% endcontent %}
+            {% endblock %}
         </div>
     </body>
 </html>
