--- a/templates/main.html
+++ b/templates/main.html
@@ -7,7 +7,7 @@
     <body>
         <div id="header">
             <h1><a href="{{ url_for('viewCatalog') }}">FOSS Catalog</a></h1>
-            <button>Login</button>
+            <button class="op">Login</button>
             <!-- Conditional login/create button-->
         </div>
         <div id="content">
