Error Handler Added (404)

--- a/templates/edit.html
+++ b/templates/edit.html
@@ -16,7 +16,7 @@
             <option value="8">System</option>
             <option value="9">Utilities</option>
         </select><br>
-        <input type="url" name="url" placeholder="{{item.url}}">
+        Url:<input type="url" name="url" placeholder="{{item.url}}">
         <input type="submit" value="Submit">
     </form>
 
