--- a/templates/category.html
+++ b/templates/category.html
@@ -5,8 +5,10 @@
         <button class="op"><a href="{{url_for('createItem')}}">Create Item</a></button>
     </div>
     {% for i in item %}
-    <div class="cat">
-        <a href="{{url_for('viewItem', item_id = i.id, category_id = i.category)}}">{{i.name}}</a>
-    </div>
+        <a href="{{url_for('viewItem', item_id = i.id, category_id = i.category)}}">
+            <div class="cat">
+                {{i.name}}
+            </div>
+        </a>
     {% endfor %} 
 {% endblock %}
