fixed url entries

--- a/templates/create.html
+++ b/templates/create.html
@@ -14,7 +14,7 @@
             {% endfor %}
         </select><br>
         Url:<br>
-        <input type="url" name="url" placeholder="URL"><br><br>
+        <input type="text" name="url" placeholder="URL"><br><br>
         <input type="submit" value="Submit" class="op">
     </form>
 {% endblock %}
