--- a/templates/edit.html
+++ b/templates/edit.html
@@ -12,7 +12,7 @@
             {% endfor %}
         </select><br><br>
         Url:<br>
-        <input type="url" name="url" placeholder="{{item.url}}">
+        <input type="text" name="url" placeholder="{{item.url}}">
         <br><br>
         <input type="submit" value="Submit" class="op">
     </form>
