--- a/templates/login.html
+++ b/templates/login.html
@@ -16,41 +16,50 @@
     </head>
     <body>
         <div id="header">
-            <h1><a href="{{ url_for('viewCatalog') }}">FOSS Catalog</a></h1>
+            <h1><a href="{{url_for('viewCatalog')}}">FOSS Catalog</a></h1>
+        </div>
+        <div class="message">
+            {% with messages = get_flashed_messages() %}
+                {% if messages %}
+                    {% for message in messages %}
+                        <p> {{ message }} </p>
+                    {% endfor %}
+                {% endif %}
+            {% endwith %}
         </div>
         <div id="content">
-            <button id="signinButton" class="btn btn-primary">Google Signin</button>
+            <button id="signinButton" class="op">Google Signin</button>
 
             <div id="result"></div>
-                <script>
-                    $('#signinButton').click(function () {
-                        function signInCallback(authResult) {
-                            if (authResult['code']) {
-                                $('#signinButton').attr('style', 'display:none');
-                                $.ajax({
-                                    type: 'POST',
-                                    url: '/gconnect?state={{STATE}}',
-                                    processData: false,
-                                    data: authResult['code'],
-                                    contentType: 'application/octet-stream; charset=utf-8',
-                                    success: function (result) {
-                                        if (result) {
-                                            $('#result').html('Login Successful!</br>' + result + '</br>Redirecting...');
-                                            setTimeout(function () {
-                                                window.location.href = "/";
-                                                }, 4000);
-                                        } else if (authResult['error']) {
-                                        console.log('There was an error: ' + authResult['error']);
-                                        } else {
-                                            $('#result').html('Failed to make a server-side call. Check your configuration and console.');
-                                        }
+            <script>
+                $('#signinButton').click(function () {
+                    function signInCallback(authResult) {
+                        if (authResult['code']) {
+                            $('#signinButton').attr('style', 'display:none');
+                            $.ajax({
+                                type: 'POST',
+                                url: '/gconnect?state={{STATE}}',
+                                processData: false,
+                                data: authResult['code'],
+                                contentType: 'application/octet-stream; charset=utf-8',
+                                success: function (result) {
+                                    if (result) {
+                                        $('#result').html('Login Successful!</br>' + result + '</br>Redirecting...');
+                                        setTimeout(function () {
+                                            window.location.href = "/";
+                                            }, 4000);
+                                    } else if (authResult['error']) {
+                                    console.log('There was an error: ' + authResult['error']);
+                                    } else {
+                                        $('#result').html('Failed to make a server-side call. Check your configuration and console.');
                                     }
-                                });
-                            }
+                                }
+                            });
                         }
-                        auth2.grantOfflineAccess().then(signInCallback);
-                    })
-                </script>
-            </div>
-        </body>
-    </html>
+                    }
+                    auth2.grantOfflineAccess().then(signInCallback);
+                })
+            </script>
+        </div>
+    </body>
+</html>
