--- a/templates/item.html
+++ b/templates/item.html
@@ -20,7 +20,7 @@
         </tr>
         <tr>
             <th>URL</th>
-            <td>{{item.url}}</td>
+            <td><a href="{{item.url}}">{{item.url}}</a></td>
         </tr>
 </table>
 
