--- a/static/style.css
+++ b/static/style.css
@@ -86,3 +86,10 @@ a {
     width: 100%;
     padding: 0px;
 }
+
+.message {
+    background-color: green;
+    color: white;
+    width: 100%;
+    margin: -10px -10px 0px -10px;
+}
