Access control established properly

--- a/templates/login.html
+++ b/templates/login.html
@@ -107,8 +107,8 @@
                     });
                 }
             </script>
-            
-            <fb:login-button scope="public_profile,email" onlogin="sendTokenToServer();" id="op">
+            <br>
+            <fb:login-button scope="public_profile,email" onlogin="sendTokenToServer();" id="flog">
                 <a href='javascript:sendTokenToServer()'>Facebook Sign In</a>
             </fb:login-button>
             
