--- a/templates/login.html
+++ b/templates/login.html
@@ -3,17 +3,18 @@
     <head>
         <title>FOSS Catalog</title>
         <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='style.css')}}">
-        <meta name="google-signin-client_id" content="{{client_id}}">
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
         <script src="https://apis.google.com/js/client:platform.js?onload=start" async defer></script>
         <script>
-            function start() { 
+            function start() {
                 gapi.load('auth2', function () {
                 auth2 = gapi.auth2.init({
-                client_id: '{{client_id}}'});
+                client_id: '{{client_id}}',
+                scope: 'profile'
+                });
             });
-        }
+            }
         </script>
     </head>
     <body>
@@ -30,114 +31,39 @@
             {% endwith %}
         </div>
         <div id="content">
-            <div id="my-signin2"></div>
-            <script>
-                $('#signinButton').click(function(){
-                    function signInCallback(authResult){
-                        if (authResult['code']){
-                            $('signinButton').attr('style', 'display: none');
-                            $.ajax({
-                                type: 'POST',
-                                url: '/gconnect?state={{STATE}}',
-                                processData: false,
-                                data: authResult['code'],
-                                contentType: 'application/octet-stream; charset=utf-8',
-                                success: function(result){
-                                    if (result) {
-                                        $('#result').html('Login Successful!</br>' + result + '</br>Redirecting...');
-                                        setTimeout(function () {
-                                            window.location.href = "/";
-                                            }, 4000);
-                                    } else if (authResult['error']) {
-                                    console.log('There was an error: ' + authResult['error']);
-                                    } else {
-                                        $('#result').html('Failed to make a server-side call. Check your configuration and console.');
-                                    }
-                                }
-                            });
-                        }
-                    }
-                    auth2.grantOfflineAccess().then(signInCallback);
-                })
-            </script>
-            
-            <script>
-                window.fbAsyncInit = function() {
-                    FB.init({
-                        appId      : '2468015700144515',
-                        cookie     : true,  // enable cookies to allow the server to access 
-                                            // the session
-                        xfbml      : true,  // parse social plugins on this page
-                        version    : 'v2.2' // use version 2.2
-                        });
-                    };
-                // Load the SDK asynchronously
-                (function(d, s, id) {
-                var js, fjs = d.getElementsByTagName(s)[0];
-                if (d.getElementById(id)) return;
-                js = d.createElement(s); js.id = id;
-                js.src = "//connect.facebook.net/en_US/sdk.js";
-                fjs.parentNode.insertBefore(js, fjs);
-                }(document, 'script', 'facebook-jssdk'));
-                // Here we run a very simple test of the Graph API after login is
-                // successful.  See statusChangeCallback() for when this call is made.
-                function sendTokenToServer() {
-                    var access_token = FB.getAuthResponse()['accessToken'];
-                    console.log(access_token)
-                    console.log('Welcome!  Fetching your information.... ');
-                    FB.api('/me', function(response) {
-                    console.log('Successful login for: ' + response.name);
-                    $.ajax({
-                        type: 'POST',
-                        url: '/fbconnect?state={{STATE}}',
-                        processData: false,
-                        data: access_token,
-                        contentType: 'application/octet-stream; charset=utf-8',
-                        success: function(result) {
-                        // Handle or verify the server response if necessary.
-                        if (result) {
-                            $('#result').html('Login Successful!</br>'+ result + '</br>Redirecting...')
-                            setTimeout(function() {
-                            window.location.href = "/catalog";
-                            }, 4000);
-            
-                        } else {
-                            $('#result').html('Failed to make a server-side call. Check your configuration and console.');
-                            }
-                        }
-                    });
-                    });
-                }
-            </script>
-            <br>
-            <fb:login-button scope="public_profile,email" onlogin="sendTokenToServer();" id="flog">
-                <a href='javascript:sendTokenToServer()'>Facebook Sign In</a>
-            </fb:login-button>
-            
+
+            <button id="signinButton" class="btn btn-primary">Google Signin</button>
             <div id="result"></div>
 
             <script>
-                function onSuccess(googleUser) {
-                  console.log('Logged in as: ' + googleUser.getBasicProfile().getName());
-                }
-                function onFailure(error) {
-                  console.log(error);
-                }
-                function renderButton() {
-                  gapi.signin2.render('my-signin2', {
-                    'scope': 'profile email',
-                    'width': 240,
-                    'height': 50,
-                    'longtitle': true,
-                    'theme': 'dark',
-                    'onsuccess': onSuccess,
-                    'onfailure': onFailure
-                  });
-                }
-              </script>
-            
-            <script src="https://apis.google.com/js/platform.js?onload=renderButton" async defer></script>
-
+                    $('#signinButton').click(function () {
+                      function signInCallback(authResult) {
+                        if (authResult['code']) {
+                          $('#signinButton').attr('style', 'display:none');
+                          $.ajax({
+                            type: 'POST',
+                            url: '/gconnect?state={{STATE}}',
+                            processData: false,
+                            data: authResult['code'],
+                            contentType: 'application/octet-stream; charset=utf-8',
+                            success: function (result) {
+                              if (result) {
+                                $('#result').html('Login Successful!</br>' + result + '</br>Redirecting...');
+                                setTimeout(function () {
+                                  window.location.href = "/";
+                                }, 4000);
+                              } else if (authResult['error']) {
+                                console.log('There was an error: ' + authResult['error']);
+                              } else {
+                                $('#result').html('Failed to make a server-side call. Check your configuration and console.');
+                              }
+                            }
+                          });
+                        }
+                      }
+                      auth2.grantOfflineAccess().then(signInCallback);
+                    })
+                  </script>
         </div>
     </body>
 </html>
