Working Google Login

--- a/templates/404err.html
+++ b/templates/404err.html
@@ -5,7 +5,9 @@
         <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='style.css')}}">
     </head>
     <body>
+        <div id="error">
         <h1>!Found - 404</h1>
         <p>The page you were looking for could not be located. Return to <a href="{{url_for('viewCatalog')}}">home page.</a></p>
+        </div>
     </body>
     </html>
