--- a/static/style.css
+++ b/static/style.css
@@ -34,15 +34,29 @@ a {
     margin: 30px;
 }
 
+#contentlog {
+    background-color: white;
+    padding: 50px;
+    margin-top: 50px;
+    border-style: solid;
+    border-radius: 5px;
+    align-content: center;
+}
+
 .op {
-    border: solid;
+    border-style: solid;
     border-color: white;
     margin-right: 10px;
     margin-bottom: 10px;
-    border: 50px;
+    border-radius: 5px;
     width: 150px;
     height: 50px;
     background-color: rgb(0, 137, 228);
+}
+
+.op:hover {
+    background-color: black;
+    color: white;
 }
 
 .cat {
@@ -96,4 +110,21 @@ a {
     padding:2.5px;
     margin-left: -10px;
     padding-left: 10px;;
+}
+
+#error {
+    border-style: solid;
+    border-color: black;
+    border-width: 5px;
+    border-radius: 10px;
+    padding: 50px;
+    background-color: white;
+}
+
+#error h1 {
+    font-size: 30px;    ;
+}
+
+#error a {
+    color: blue;
 }
